--- a/src/pages/layout/index.scss
+++ b/src/pages/layout/index.scss
@@ -1,5 +1,20 @@
-.logo {
-    padding: 10px 10px;
+#root,
+body,
+html {
+    height: 100%;
+}
+
+.ant-layout {
+    display: flex;
     width: 100%;
-    text-align: center;
+    min-height: 100%;
+}
+
+.rootContent {
+
+    .logo {
+        padding: 10px 10px;
+        width: 100%;
+        text-align: center;
+    }
 }
